[gd_scene load_steps=6 format=3 uid="uid://bfwobi3d5w6ao"]

[ext_resource type="Script" path="res://hud.gd" id="1_vavch"]
[ext_resource type="FontFile" uid="uid://3xrogjijpwnu" path="res://fonts/Xolonium-Regular.ttf" id="1_x8p3e"]

[sub_resource type="InputEventAction" id="InputEventAction_3g04o"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_if5ww"]
events = [SubResource("InputEventAction_3g04o")]

[sub_resource type="Theme" id="Theme_q2s5y"]
default_font = ExtResource("1_x8p3e")

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_vavch")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 81.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_x8p3e")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.5
offset_top = -121.5
offset_right = 254.5
offset_bottom = 121.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_x8p3e")
theme_override_font_sizes/font_size = 64
text = "Dodge the creeps!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -136.0
offset_top = -140.0
offset_right = 144.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_x8p3e")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_if5ww")
text = "Start"

[node name="SaveBtn" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -216.0
offset_top = -144.0
offset_right = -8.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_x8p3e")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_if5ww")
text = "Save"

[node name="SkipBtn" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -144.0
offset_right = 216.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_x8p3e")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_if5ww")
text = "Skip"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="NameInput" type="LineEdit" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = 88.0
offset_right = 136.0
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameLbl" type="Label" parent="."]
offset_left = 104.0
offset_top = 424.0
offset_right = 232.0
offset_bottom = 447.0
theme = SubResource("Theme_q2s5y")
text = "Name"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="SaveBtn" to="." method="_on_save_btn_pressed"]
[connection signal="pressed" from="SkipBtn" to="." method="_on_skip_btn_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
